2010-10-25  Chao-ying Fu  <fu@mips.com>

	* gas/mips/mips32-dsp.d, gas/mips/mips32-dsp.s: Add madd, maddu, msub,
	msubu, mult, multu.

2010-10-25  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/12049
	* gas/i386/i386.exp: Run relax-1 and relax-2 for all 32bit
	targets.  Run x86-64-relax-1.

	* gas/i386/x86-64-relax-1.d: New.
	* gas/i386/x86-64-relax-1.s: Likewise.

2010-10-24  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/mips.exp: Simplify enabling of MIPS16 testing.

2010-10-24  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/at-1.d: Handle ECOFF relocations.
	* gas/mips/eret-1.d: Handle ECOFF.
	* gas/mips/eret-2.d: Likewise.
	* gas/mips/eret-3.d: Likewise.
	* gas/mips/mips.exp: Only run "aent" for ELF.

2010-10-24  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/ld.s: Adjust to let SD, L.D, S.D, LDC1 and SDC1
	macros to be tested, according to the "tsd", "tl_d", "ts_d",
	"tldc1" and "tsdc1" symbols.
	* gas/mips/sd.d: New test.
	* gas/mips/ecoff@sd.d: Likewise, ECOFF version.
	* gas/mips/mips1@ecoff@sd.d: Likewise, MIPS I/ECOFF version.
	* gas/mips/r3000@ecoff@sd.d: Likewise, R3000/ECOFF version.
	* gas/mips/r3900@ecoff@sd.d: Likewise, R3900/ECOFF version.
	* gas/mips/mips2@ecoff@sd.d: Likewise, MIPS II/ECOFF version.
	* gas/mips/mips32@ecoff@sd.d: Likewise, MIPS32/ECOFF version.
	* gas/mips/mips32r2@ecoff@sd.d: Likewise, MIPS32r2/ECOFF
	version.
	* gas/mips/sd-forward.d: New test.
	* gas/mips/ecoff@sd-forward.d: Likewise, ECOFF version.
	* gas/mips/mips1@ecoff@sd-forward.d: Likewise, MIPS I/ECOFF
	version.
	* gas/mips/r3000@ecoff@sd-forward.d: Likewise, R3000/ECOFF
	version.
	* gas/mips/r3900@ecoff@sd-forward.d: Likewise, R3900/ECOFF
	version.
	* gas/mips/mips2@ecoff@sd-forward.d: Likewise, MIPS II/ECOFF
	version.
	* gas/mips/mips32@ecoff@sd-forward.d: Likewise, MIPS32/ECOFF
	version.
	* gas/mips/mips32r2@ecoff@sd-forward.d: Likewise, MIPS32r2/ECOFF
	version.
	* gas/mips/l_d.d: New test.
	* gas/mips/mips1@l_d.d: Likewise, MIPS I version.