@@ -8,9 +8,9 @@ Disassembly of section .text:
 
 0+ <.text>:
 #...
-   e:	e9 8d 00 00 00       	jmp    0xa0
+   e:	e9 8d 00 00 00       	jmp    (0x)?a0( .*)?
 #...
-  21:	eb 7d                	jmp    0xa0
+  21:	eb 7d                	jmp    (0x)?a0( .*)?
 #...
   a0:	90                   	nop
 #pass
