@@ -1,3 +1,8 @@
+2010-10-26  Dave Korn  <dave.korn.cygwin@gmail.com>
+
+	* gas/i386/relax-1.d: Generalize regexes a bit.
+	* gas/i386/relax-2.d: Likewise.
+
 2010-10-25  Chao-ying Fu  <fu@mips.com>
 
 	* gas/mips/mips32-dsp.d, gas/mips/mips32-dsp.s: Add madd, maddu, msub,
